# solana-zkvm

./: .gitignore  .gitmodules  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  configure.sh  setup-validator.sh  verify.sh
coinflip/: .gitignore  package.json
coinflip/client/: client.ts
coinflip/program/: Cargo.toml
coinflip/program/src/: lib.rs
coinflip/tests/: native.test.ts
ed25519-dalek/: Cargo.toml
rbpf/: Cargo.toml  README.md
rbpf/.github/workflows/: main.yml
rbpf/benches/: elf_loader.rs  jit_compile.rs  memory_mapping.rs  vm_execution.rs
rbpf/cli/: Cargo.toml
rbpf/cli/src/: main.rs
rbpf/examples/: disassemble.rs  to_json.rs
rbpf/fuzz/: Cargo.toml
rbpf/fuzz/fuzz_targets/: common.rs  dumb.rs  grammar_aware.rs  semantic_aware.rs  smart.rs  smart_jit_diff.rs  smarter_jit_diff.rs  verify_semantic_aware.rs
rbpf/scripts/: cargo-for-all-lock-files.sh  increment-cargo-version.sh
rbpf/src/: aarch64.rs  aligned_memory.rs  asm_parser.rs  assembler.rs  debugger.rs  disassembler.rs  ebpf.rs  elf.rs  elf_parser_glue.rs  error.rs  fuzz.rs  insn_builder.rs  interpreter.rs  jit.rs  lib.rs  memory_management.rs  memory_region.rs  program.rs  static_analysis.rs  syscalls.rs  verifier.rs  vm.rs  x86.rs
rbpf/src/elf_parser/: consts.rs  mod.rs  types.rs
rbpf/test_utils/: Cargo.toml
rbpf/test_utils/src/: lib.rs
rbpf/tests/: assembler.rs  disassembler.rs  execution.rs  exercise_instructions.rs  verifier.rs
rbpf/tests/elfs/: bss_section.rs  data_section.rs  elfs.sh  program_headers_overflow.ld  relative_call.rs  reloc_64_64.rs  reloc_64_relative.rs  reloc_64_relative_data.c  rodata_section.rs  struct_func_pointer.rs  syscall_reloc_64_32.rs  syscall_static.rs  syscalls.rs
risczero/: .gitignore  Cargo.toml  rust-toolchain.toml
risczero/contracts/: .gitignore  SvmVerifier.sol  hardhat.config.ts  package.json
risczero/contracts/scripts/: DeploySvmVerifier.s.sol  deploySvmVerifier.ts  deployVerifier.ts  verification.ts
risczero/contracts/src/: IRiscZeroVerifier.sol  RiscZeroVerifierEmergencyStop.sol  RiscZeroVerifierRouter.sol  SvmVerifier.sol
risczero/contracts/src/groth16/: RiscZeroGroth16Verifier.sol
risczero/contracts/tests/: RiscZeroGroth16Verifier.t.sol  SvmVerifier.t.sol
risczero/host/: Cargo.toml
risczero/host/src/: main.rs  utils.rs
risczero/host/tests/: prove_test.rs
risczero/methods/: Cargo.toml  build.rs
risczero/methods/core/: Cargo.toml  transaction.json
risczero/methods/core/client/: Cargo.toml
risczero/methods/core/client/src/rpc/: config.rs  mod.rs  validator_client.rs
risczero/methods/core/src/: bultins.rs  config_simulator.rs  integration.rs  lib.rs  mock_bank.rs  simulate_solana.rs  transaction_builder.rs  types.rs
risczero/methods/core/src/mock_simulator/: integration.rs  mod.rs
risczero/methods/core/src/rpc/: config.rs  mod.rs  validator_client.rs
risczero/methods/core/src/solana_simulator/: error.rs  mod.rs  utils.rs
risczero/methods/core/types/: Cargo.toml
risczero/methods/core/types/src/: error.rs  lib.rs  result.rs  simulator_error.rs
risczero/methods/guest/: Cargo.toml
risczero/methods/guest/src/: main.rs
risczero/script/: Deploy.s.sol
risczero/testdata/: receipt.json
risczero/tests/: SvmVerifier.t.sol
solana/: Cargo.toml
solana/compute-budget/: Cargo.toml
solana/compute-budget/src/: compute_budget.rs
solana/frozen-abi/src/: abi_example.rs
solana/metrics/: Cargo.toml
solana/metrics/src/: counter.rs  datapoint.rs  metrics.rs
solana/program-runtime/: Cargo.toml
solana/program-runtime/src/: invoke_context.rs  lib.rs  loaded_programs.rs  log_collector.rs  sysvar_cache.rs  timings.rs
solana/program-test/tests/: bpf.rs
solana/programs/bpf_loader/: Cargo.toml
solana/programs/bpf_loader/src/: lib.rs
solana/programs/bpf_loader/src/syscalls/: cpi.rs  mod.rs
solana/programs/loader-v4/: Cargo.toml
solana/programs/loader-v4/src/: lib.rs
solana/programs/sbf/: Cargo.toml
solana/programs/sbf/rust/sibling_inner_instructions/: Cargo.toml
solana/sdk/: Cargo.toml
solana/sdk/gen-headers/src/: main.rs
solana/sdk/program/: Cargo.toml
solana/sdk/program/src/: example_mocks.rs  lib.rs  pubkey.rs  system_instruction.rs
solana/sdk/program/src/message/: address_loader.rs
solana/sdk/src/: account.rs  ed25519_instruction.rs  example_mocks.rs  feature_set.rs  genesis_config.rs  secp256k1_instruction.rs  timing.rs
solana/sdk/src/signer/: keypair.rs
solana/svm/: Cargo.toml
solana/svm/src/: account_loader.rs  account_rent_state.rs  lib.rs  message_processor.rs  program_loader.rs  runtime_config.rs  transaction_error_metrics.rs  transaction_processor.rs
solana/svm/tests/: integration_test.rs
solana/svm/tests/example-programs/clock-sysvar/: Cargo.toml
solana/svm/tests/example-programs/hello-solana/: Cargo.toml
solana/svm/tests/example-programs/simple-transfer/: Cargo.toml
solana/zk-sdk/src/encryption/: elgamal.rs  pedersen.rs
solana/zk-sdk/src/sigma_proofs/: ciphertext_ciphertext_equality.rs  ciphertext_commitment_equality.rs  zero_ciphertext.rs
solana/zk-sdk/src/sigma_proofs/grouped_ciphertext_validity/: handles_2.rs  handles_3.rs
solana/zk-token-sdk/src/encryption/: elgamal.rs  pedersen.rs
solana/zk-token-sdk/src/sigma_proofs/: ciphertext_ciphertext_equality_proof.rs  ciphertext_commitment_equality_proof.rs  zero_balance_proof.rs
solana/zk-token-sdk/src/sigma_proofs/grouped_ciphertext_validity_proof/: handles_2.rs  handles_3.rs
