[workspace]
resolver = "2"
members = ["host", "methods",  "methods/core", "methods/core/types"]

[profile.dev]
opt-level = 2

[profile.release]
debug = 1
lto = "thin"

[patch.crates-io.ed25519-dalek]
git = "https://github.com/ZpokenWeb3/ed25519-dalek.git"
rev = "0fbdbe553a1cce4b2ba60f697a1e39a3304b1fc4"

[patch.crates-io]
solana-program = { path = "../solana/sdk/program" }
solana-curve25519 = { path = "../solana/curves/curve25519" }
solana-sdk = {path = "../solana/sdk"}
solana-zk-sdk = { path = "../solana/zk-sdk" }
solana-zk-token-sdk = { path = "../solana/zk-token-sdk" }
