[package]
name = "rbpf_cli"
version = "0.8.1"
description = "CLI to test and analyze eBPF programs"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/rbpf"
homepage = "https://solana.com/"
keywords = ["BPF", "eBPF", "interpreter", "JIT"]
edition = "2018"

[dependencies]
solana_rbpf = { path = "../", features = ["debugger"] }
test_utils = { path = "../test_utils/" }
clap = "3.0.0-beta.2"
