[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "1.0.3" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
svm-core = { path = "../methods/core", features = ["async_enabled"] }
solana-sdk = { path = "../../solana/sdk", version = "=2.0.3" }
serde = "1.0.206"
serde_json = "1.0.124"
anyhow = "1.0.86"
bincode = "1.3.3"
hex = "0.4.3"
tokio = { version = "1", features = ["full"] }
