[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "1.0.3", features = ["prove", "docker"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
svm-core = { path = "../methods/core", features = ["async_enabled"] }
solana-sdk = { path = "../../solana/sdk", version = "=2.0.3" }
serde = "1.0.206"
serde_json = "1.0.124"
anyhow = "1.0.86"
bincode = "1.3.3"
hex = "0.4.3"
tokio = { version = "1", features = ["full"] }
solana-simulator-types = {path = "../methods/core/types", features = ["async_enabled"]}
clap = "2.34.0"
log = "0.4.21"
risc0-ethereum-contracts = { git = "https://github.com/risc0/risc0-ethereum", tag = "v1.0.0" }
alloy-primitives = { version = "0.6", default-features = false, features = ["rlp", "serde", "std"] }
alloy-sol-types = { version = "0.6" }


[patch.crates-io]
solana-program = { path = "../../solana/sdk/program" }
solana-curve25519 = { path = "../../solana/curves/curve25519" }
solana-sdk = {path = "../../solana/sdk"}
solana-zk-sdk = { path = "../../solana/zk-sdk" }
solana-zk-token-sdk = { path = "../../solana/zk-token-sdk" }