[package]
name = "methods"
version = "0.1.0"
edition = "2021"

[build-dependencies]
risc0-build = { version = "1.0.1", features = ["docker"] }
risc0-build-ethereum = { git = "https://github.com/risc0/risc0-ethereum", rev="f013b5e6de8c5e2f88e100f4d5e1cdb62e07ed6a" }
#risc0-ethereum-contracts = { git = "https://github.com/risc0/risc0-ethereum", tag = "v1.0.0" }
risc0-zkp = { version = "1.1.0", default-features = false }
#alloy-primitives = { version = "0.6", default-features = false, features = ["rlp", "serde", "std"] }
#alloy-sol-types = { version = "0.6" }

[package.metadata.risc0]
methods = ["guest"]
