[package]
name = "methods"
version = "0.1.0"
edition = "2021"

[build-dependencies]
risc0-build = { version = "1.1.0-rc.3", features = ["docker"] }
risc0-build-ethereum = { git = "https://github.com/risc0/risc0-ethereum", rev="b15689b9ed72aa86e507cab76a1424fc2fbac182" }
#risc0-ethereum-contracts = { git = "https://github.com/risc0/risc0-ethereum", tag = "v1.0.0" }
risc0-zkp = { version = "1.1.0-rc.3", default-features = false }
#alloy-primitives = { version = "0.6", default-features = false, features = ["rlp", "serde", "std"] }
#alloy-sol-types = { version = "0.6" }

[package.metadata.risc0]
methods = ["guest"]
