[package]
name = "methods"
version = "0.1.0"
edition = "2021"

[build-dependencies]
risc0-build = { version = "1.1.0-rc.3", features = ["docker"] }
risc0-build-ethereum = { git = "https://github.com/risc0/risc0-ethereum", rev="b15689b9ed72aa86e507cab76a1424fc2fbac182" }
risc0-zkp = { version = "1.1.0-rc.3", default-features = false }

[package.metadata.risc0]
methods = ["guest"]
