[package]
name = "svm-core"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = { path = "../../../solana/sdk/program", version = "=2.0.3", default-features = false }
solana-sdk = { path = "../../../solana/sdk", version = "=2.0.3", features = ["dev-context-only-utils"] }
solana-svm = { path = "../../../solana/svm", version = "=2.0.3", default-features = false }
solana-program-runtime = { path = "../../../solana/program-runtime", version = "=2.0.3", default-features = false }
solana-compute-budget = { path = "../../../solana/compute-budget", version = "=2.0.3", default-features = false }
solana-bpf-loader-program = { path = "../../../solana/programs/bpf_loader", version = "=2.0.3", default-features = false }
solana-system-program = { path = "../../../solana/programs/system", version = "=2.0.3", default-features = false }
svm-client = { path = "client", optional = true }
solana-client = { path = "../../../solana/client", optional = true }
solana-loader-v4-program = { path = "../../../solana/programs/loader-v4", version = "=2.0.3" }
solana-compute-budget-program = { path = "../../../solana/programs/compute-budget", version = "=2.0.3" }
solana-address-lookup-table-program = { path = "../../../solana/programs/address-lookup-table", version = "=2.0.3" }
bincode = "1.3.3"
serde = { version = "1.0.204", features = ["derive"] }
base64 = "0.22.1"
thiserror = "1.0.63"
hex = "0.4.3"
async-trait = "0.1.81"
log = "0.4.22"
serde_json = "1.0.117"

#solana-stake-program = { path = "../../../solana/programs/stake", version = "=2.0.3", optional = true }
#solana-vote-program = { path = "../../../solana/programs/vote", version = "=2.0.3", optional = true }
#solana-inline-spl = { path = "../../../solana/inline-spl", version = "=2.0.3", optional = true }
#solana-client = {path = "../../../solana/client", version = "=2.0.3", optional = true}

[dev-dependencies]
wasm-bindgen = "0.2.92"
wasm-bindgen-test = "0.3.42"
console_log = "1.0.0"
log = "0.4.22"
serde_json = "1.0.117"
serde = { version = "1.0.204", features = ["derive"] }

[features]
async_enabled = ["svm-client", "solana-client"]

[patch.crates-io.curve25519-dalek]
git = "https://github.com/anza-xyz/curve25519-dalek.git"
rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464"

[patch.crates-io.ed25519-dalek]
git = "https://github.com/staaason/ed25519-dalek.git"
rev = "91938d89eb5ca4a141d6fda1d1db11aebadc4388"
