[package]
name = "custom_method"
version = "0.1.0"
edition = "2021"
resolver = "2"

[workspace]

[dependencies]
risc0-zkvm = { version = "1.1.0-rc.3", default-features = false, features = ["getrandom", "std"] }
getrandom = { version = "0.1.16", features = ["dummy"] }

svm-core = {path = "../core"}
solana-sdk = { path = "../../../solana/sdk", version = "=2.0.3" }
solana-program = { path = "../../../solana/sdk/program", version = "=2.0.3" }
solana-svm = { path = "../../../solana/svm", version = "=2.0.3", default-features = false}
solana-simulator-types = {path = "../core/types"}
bincode = "1.3.3"

[patch.crates-io.curve25519-dalek]
git = "https://github.com/anza-xyz/curve25519-dalek.git"
rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464"

[patch.crates-io.ed25519-dalek]
git = "https://github.com/ZpokenWeb3/ed25519-dalek.git"
rev = "0fbdbe553a1cce4b2ba60f697a1e39a3304b1fc4"


[patch.crates-io]
solana-program = { path = "../../../solana/sdk/program" }
solana-curve25519 = { path = "../../../solana/curves/curve25519" }
solana-sdk = {path = "../../../solana/sdk"}
solana-zk-sdk = { path = "../../../solana/zk-sdk" }
solana-zk-token-sdk = { path = "../../../solana/zk-token-sdk" }


