[package]
name = "svm-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-stake-program = { path = "../../../../solana/programs/stake", version = "=2.0.3" }
solana-vote-program = { path = "../../../../solana/programs/vote", version = "=2.0.3" }
solana-inline-spl = { path = "../../../../solana/inline-spl", version = "=2.0.3" }
solana-client = { path = "../../../../solana/client", version = "=2.0.3" }
solana-program = { path = "../../../../solana/sdk/program", version = "=2.0.3", default-features = false }
solana-sdk = { path = "../../../../solana/sdk", version = "=2.0.3", features = ["dev-context-only-utils"] }
solana-account-decoder = { path = "../../../../solana/account-decoder", version = "=2.0.3" }
solana-cli = { path = "../../../../solana/cli", version = "=2.0.3" }
solana-cli-config = { path = "../../../../solana/cli-config", version = "=2.0.3" }
bincode = "1.3.3"
serde = { version = "1.0.204", features = ["derive"] }
base64 = "0.22.1"
thiserror = "1.0.63"
hex = "0.4.3"
async-trait = "0.1.81"
config = "0.14.0"
tracing = "0.1"
hyper = "0.14.29"
log = "0.4.21"
serde_json = "1.0.117"
tokio = "1.29.1"
